These are the Release Notes for post Revision 2.5.0 top-of-trunk netperf:

*) A new global -Z option has been added to netperf and netserver.
   This takes as an argument a passphrase.  In the case of netserver
   it will expect a control message with the passphrase as the first
   thing it receives on the control connection.  If netserver does not
   receive a control message with the passphrase it will close the
   control connection and move-on.  If the netserver receives a
   control message with a passprhase when it is not lookign for one,
   it will be ignored. There is at present a 20 second timeout on the
   attempted receipt of the request message. In the case of netperf,
   the passphrase will be the first thing sent on the control
   connection.  There is no response to a passphrase control message.

*) Demo mode output format will now track the omni output format. So,
   if the omni ouput format is CSV then the interim results will be
   emitted in csv. Likewise for keyval.  If the mode is human (default
   and test-specific -O) then the output remains unchanged.  Keyval
   output includes the count of interval, with a mind towards being
   able to source it in shells and whatnot.  Subject to change without
   notice.

*) A patch to correctly handle IPv6 addresses in the control messages,
   courtesy of Bjoern Zeeb.

*) The global -F option can now be used specify a local and/or remote
   fill file.

*) It is now possible to set/get the TCP congestion control algorithm
   being used by either end of the test connection when using the omni
   code.  The output selectors are LOCAL_CONG_CONTROL and
   REMOTE_CONG_CONTROL and setting is via the test-specific -K option.

*) Stop leaking file descriptors when looking-up probable egress
   interface names and I/O slot numbers.

*) The global -Y option can be used to set IP_TOS on those platforms
   which support it.  Since this is specific to IP (v4 or v6) it may